--- a/package.json
+++ b/package.json
@@ -3,22 +3,21 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
     "dev": "nuxt dev",
+    "build": "nuxt build",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.7.22",
-    "@heroicons/vue": "^2.1.4",
     "@nuxt/content": "^2.13.0",
     "@nuxt/fonts": "^0.7.1",
     "@nuxt/image": "^1.7.0",
     "@nuxthq/studio": "^2.0.3",
-    "@nuxtjs/tailwindcss": "^6.12.0",
     "@tailwindcss/typography": "^0.5.13",
-    "nuxt": "^3.12.2",
+    "@tailwindcss/vite": "^4.1.6",
+    "nuxt": "^3.17.3",
+    "tailwindcss": "^4.1.6",
     "vue": "latest"
   },
   "devDependencies": {
